--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
                         <ul>
                            <li class="login-btn">
                               <span>
-                                 <a href="contact-us.php" class="ds-a">Book Appoinment</a>
+                                 <a href="contact-us.html" class="ds-a">Book Appoinment</a>
                               </span>
                            </li>
                         </ul>
@@ -62,7 +62,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-lg-3 col-md-3 col-sm-12 col-12">
-                        <a href="index.php">
+                        <a href="index.html">
                            <img src="assets/images/dental-logo-28-july.png" class="ds-logo" alt="img" class="">
                         </a>
                   </div>
@@ -70,14 +70,14 @@
                      <div class="sb-mid-right-section">
                         <ul>
                            <li>
-                              <a href="contact-us.php"><i class="fas fa-phone"></i></a>
-                              <a href="contact-us.php" href="tel:+91-8448449833" class="ds-a">Call Us 24/7<br>
+                              <a href="contact-us.html"><i class="fas fa-phone"></i></a>
+                              <a href="contact-us.html" href="tel:+91-8448449833" class="ds-a">Call Us 24/7<br>
                                  +91 9988774411
                               </a>
                            </li>
                            <li class="border-none pe-0">
-                              <a href="contact-us.php"><i class="fas fa-map-marker-alt"></i></a>
-                              <a href="contact-us.php" class="ds-a">Mon - Fri: 8:00 - 20:00<br>
+                              <a href="contact-us.html"><i class="fas fa-map-marker-alt"></i></a>
+                              <a href="contact-us.html" class="ds-a">Mon - Fri: 8:00 - 20:00<br>
                                  Sat - Sun: 9:00 - 16:00</a>
                            </li>
                         </ul>
@@ -93,24 +93,24 @@
                      <nav class="navbar navbar-expand-lg main-nav">
                         <ul class="navbar-nav">
                            <li class="nav-item ps-rel">
-                              <a class="nav-link ds-a" href="index.php">Home
+                              <a class="nav-link ds-a" href="index.html">Home
                                  <!-- <span><i class="fas fa-chevron-right"></i></span> -->
                               </a>
                            </li>
                            <li class="nav-item ps-rel">
-                              <a class="nav-link ds-a" href="about-us.php">About Us
+                              <a class="nav-link ds-a" href="about-us.html">About Us
                               </a>
                            </li>
                            <li class="nav-item ps-rel">
-                              <a class="nav-link ds-a" href="service.php">Services
+                              <a class="nav-link ds-a" href="service.html">Services
                               </a>
                            </li>
                            <li class="nav-item ps-rel">
-                              <a class="nav-link ds-a" href="faq.php">Faqs
+                              <a class="nav-link ds-a" href="faq.html">Faqs
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link ds-a" href="contact-us.php">Contact Us</a>
+                              <a class="nav-link ds-a" href="contact-us.html">Contact Us</a>
                            </li>
                         </ul>
                      </nav>
